logs/products.projectmanager.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/projectmanager'...
Listing './lib/python3.5/site-packages/Products/projectmanager/browser'...
Listing './lib/python3.5/site-packages/Products/projectmanager/content'...
Compiling './lib/python3.5/site-packages/Products/projectmanager/gvgen.py'...
***   File "./lib/python3.5/site-packages/Products/projectmanager/gvgen.py", line 211
    print "element = " + str(e['id'])
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/projectmanager/i18n'...
Listing './lib/python3.5/site-packages/Products/projectmanager/locales'...
Listing './lib/python3.5/site-packages/Products/projectmanager/locales/en'...
Listing './lib/python3.5/site-packages/Products/projectmanager/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/projectmanager/locales/fr'...
Listing './lib/python3.5/site-packages/Products/projectmanager/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/projectmanager/profiles'...
Listing './lib/python3.5/site-packages/Products/projectmanager/profiles/default'...
Listing './lib/python3.5/site-packages/Products/projectmanager/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/projectmanager/profiles/default/workflows'...
Listing './lib/python3.5/site-packages/Products/projectmanager/profiles/default/workflows/PM_ActionWorkflow'...
Listing './lib/python3.5/site-packages/Products/projectmanager/profiles/default/workflows/PM_TaskWorkflow'...
Listing './lib/python3.5/site-packages/Products/projectmanager/skins'...
Listing './lib/python3.5/site-packages/Products/projectmanager/skins/projectmanager'...
Listing './lib/python3.5/site-packages/Products/projectmanager/tests'...
Compiling './lib/python3.5/site-packages/Products/projectmanager/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/projectmanager/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.projectmanager-1.2.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
